Fix for bug #1134 Numpad "." key broken for num entry

http://projects.blender.org/tracker/index.php?func=detail&aid=1134&group_id=9&atid=125

Thanks to jesterking for saving me the time to look for the proper spelling for the event ;)